--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/header.css">
     <title>Landing Page</title>
@@ -13,7 +14,7 @@
          <a class="navigation__link" href="#">About</a>
          <a class="navigation__link" href="#">Services</a>
          <a class="navigation__link" href="#">Blog</a>
-         <a class="navigation__link" href="#">Contact</a>               
+         <a class="navigation__link" href="#">Contacts</a>               
         </nav>
         </header>
         <main>
@@ -23,14 +24,13 @@
                     <h1 class="content__mainTitle">Artificial intelligence & Syber security</h1>
                     <p class="content__description">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
                     <div class="content__btns">
-                        <button class="content__btns__button">Get Started</button>
-                        <button class="content__btns__button btn-play"><img src="./img/play.png" alt="play"> Watch Video</button>
+                        <button class="content__btns__button">Начать</button>
+                        <button class="content__btns__button btn-play"><img src="./img/play.png" alt="play">Watch video</button>
                     </div>
                 </div>
                 <img src="./img/mainImg.png" alt="Main Image">
             </section>
-       
-    <article>
+       <article>
         <div class="logos container">
             <img src="./img/logo1.png" alt="Logo 1">
             <img src="./img/logo2.png" alt="Logo 2">
@@ -74,7 +74,7 @@
                 <h3>In print, and publishing industries for previewing layouts and visual mockups.</h3>
                 <p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
             </div>
-            <div class="card hidden">
+            <div class="card">
                 <img src="./img/cart5.png" alt="Card 5">
                 <h3>Value for Results in Global Agency Awards</h3>
                 <p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
@@ -104,19 +104,16 @@
  <footer>
     <section class="contacts__list">
         <div class="contacts__wrapper container">
-            <div class="image container">
-            <div class="position__card">
+            <div class="contacts__list__Image">
               <img src="./img/email.png" alt="Email">
               <img src="./img/telephone.png" alt="Telephone">
               <img src="./img/geolocation.png" alt="Geolocation">  
-            </div>  
-           <div class="contacts__left">   
-            <h5 class="contacts__text0">INFORMATION</h5>
+              <h5 class="contacts__text0">INFORMATION</h5>
               <p class="contacts__text1">Company@gmail.com.com</p>
               <p class="contacts__text2">Phone: (064) 332-1233</p>
               <p class="contacts__text3">450 Wall Street, USA, New York</p> 
-           </div>
-            </div>
+            </div>  
+          
 
           <div class="contacts__center">
             <h6 class="contacts__text4">ABOUT THE STORE</h6>
@@ -131,10 +128,11 @@
               <img src="./img/YouTube.png" alt="YouTube">
               <img src="./img/IN.png" alt="IN">
               <img src="./img/Twitter.png" alt="Twitter">  
-                </div> 
+             </div> 
             </div>
-        </div>
-    </div></section>
+            </div>
+            </div>
+</section>
   </footer>
 </body>
 </html>    
